fixed overflow-x

--- a/project/202012/lab-22/css/style.scss
+++ b/project/202012/lab-22/css/style.scss
@@ -1,9 +1,11 @@
 body {
-  max-width: 1110px;
-  margin: 0 auto;
+
 }
 
 #sppage {
+  max-width: 1110px;
+  margin: 0 auto;
+  overflow-x: hidden;
   h3 {
     font-size: 20px;
   }
@@ -279,11 +281,18 @@ body {
       }
 
       &__coffee {
+        position: relative;
+        width: 100%;
         &-grounds {
           position: absolute;
-          width: 150px;
-          top: -40px;
-          right: -40px;
+          top:0;
+          right:0;
+          margin-top:-40px;
+          margin-right:-40px;
+          img{
+            width: 150px;
+            height: auto;
+          }
         }
 
         &-cups {
@@ -645,6 +654,7 @@ body {
     }
   }
 }
+
 @media only screen and (min-width: 996px) {
   #sppage {
     h3 {
@@ -776,5 +786,10 @@ body {
         }
       }
     }
+  }
+}
+@media only screen and (min-width: 1100px) {
+  #sppage {
+    overflow-x: visible;
   }
 }
